--- a/css/style.css
+++ b/css/style.css
@@ -93,3 +93,18 @@ header {
   cursor: not-allowed;
   opacity: 0.6;
 }
+.play-btn {
+  margin-top: 10px;
+  padding: 8px 12px;
+  border: none;
+  background-color: #ff69b4;
+  color: white;
+  border-radius: 8px;
+  font-size: 14px;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.play-btn:hover {
+  background-color: #ff1493;
+}
